<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/back_button"
        style="@style/PrettyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/greybutton"
        android:text="@string/about_back_button" />

    <TextView
        android:id="@+id/developer_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/developer"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/graphics_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/developer_tv"
<<<<<<< HEAD
        android:layout_marginTop="50dp"
=======
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
>>>>>>> 869acbc96e2369968204b407a58da2c0c159e4d9
        android:text="@string/graphics"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/consulting_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/graphics_tv"
<<<<<<< HEAD
        android:layout_marginTop="50dp"
=======
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
>>>>>>> 869acbc96e2369968204b407a58da2c0c159e4d9
        android:text="@string/consulting"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/licence_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/consulting_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/license"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/version_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
<<<<<<< HEAD
        android:text="1.8" />

    <TextView
        android:id="@+id/nyan_cat_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/licence_tv"
        android:layout_marginTop="50dp"
        android:text="@string/nyan_cat"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="15sp" />
=======
        android:text="@string/version" />
>>>>>>> 869acbc96e2369968204b407a58da2c0c159e4d9

</RelativeLayout>
