<!--	@author Lars Harmsen
		Copyright (c) <2014> <Lars Harmsen - Quchen> -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ImageButton
        android:id="@+id/play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/play_button"
        android:src="@drawable/play_button" />

    <ImageButton
        android:id="@+id/mute_button"
        style="@style/PrettyButton"
        android:background="@drawable/brownbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/medaille_socket"
        android:layout_alignParentLeft="true"
        android:contentDescription="@string/mute_button"
        android:src="@drawable/speaker" />

    <ImageView
        android:id="@+id/medaille_socket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/medaille_image"
        android:src="@drawable/socket" />

    <Button
        android:id="@+id/about_button"
        style="@style/PrettyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/medaille_socket"
        android:layout_alignTop="@+id/mute_button"
        android:layout_alignParentRight="true"
        
        android:background="@drawable/brownbutton"
        android:text="@string/about_button" />
    
    <Button
        android:id="@+id/sign_out_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/play_button"
        android:layout_centerHorizontal="true"
        android:text="Sign Out"
        android:visibility="gone" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/play_button"
        android:layout_centerHorizontal="true" >
    </com.google.android.gms.common.SignInButton>

    <TextView
        android:id="@+id/view_middle_invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/play_button"
        android:layout_centerHorizontal="true"/>

    <ImageButton
        android:id="@+id/highscore_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/view_middle_invisible"
        android:layout_toRightOf="@+id/view_middle_invisible"
        android:contentDescription="highscorebutton"
        android:src="@drawable/highscore_button" />

    <ImageButton
        android:id="@+id/achievement_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/view_middle_invisible"
        android:layout_toLeftOf="@+id/view_middle_invisible"
        android:contentDescription="achievementbutton"
        android:src="@drawable/achievement_button" />

</RelativeLayout>